--- a/src/styles/helpers/mixins.scss
+++ b/src/styles/helpers/mixins.scss
@@ -4,3 +4,30 @@
     justify-content: center;
     gap: $gap;
 }
+
+@mixin flexAlign(){
+    display: flex;
+    align-items: center;
+   
+}
+
+@mixin flexJustify($gap){
+    display: flex;
+    justify-content: center;
+    gap: $gap;
+   
+}
+
+@mixin flexColumn($gap){
+    display: flex;
+    flex-direction: column;
+    gap: $gap;
+   
+}
+
+@mixin spaceBetween($gap){
+    display: flex;
+    justify-content: space-between;
+    gap: $gap;
+   
+}
