--- a/src/layouts/DefaultLAyout.module.scss
+++ b/src/layouts/DefaultLAyout.module.scss
@@ -1,10 +1,17 @@
 .Header{
     width: 100%;
+    height: 60px;
     max-width: 1920px;
     margin: 0 auto;
     @include flexCenter(0);
     padding: 10px;
     background-color: $color-light;
+   
+    
 
+    .logo{
+        transform: scale(0.75);
+    }
 
+   
 }
