--- a/src/styles/layout/colors.scss
+++ b/src/styles/layout/colors.scss
@@ -2,3 +2,5 @@ $color-primary: #273049;
 $color-light: #f4f2ec;
 $color-secondary: #5ac6ec;
 $color-dark: #00182b;
+$color-white: white;
+$color-overlay:  rgba(0, 0, 0, 0.41);
