--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -1,11 +1,36 @@
+.Cards {
+  width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
 
-.Cards{
+  padding: 40px 30px;
+
+  .cardsWrapper {
     width: 100%;
-    max-width: 1920px;
-    margin: 0 auto;
-
-    padding: 40px 20px 20px 20px;
-
-    @include flexJustify(15px);
+    height: 100%;
+    display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+  }
+
+  .show {
+    width: 100%;
+    padding-top: 50px;
+    @include flexCenter(0);
+    button {
+      width: 200px;
+      height: 30px;
+      text-transform: uppercase;
+      @include font($h5, 500, white);
+      @include flexCenter(0);
+      background-color: $color-primary;
+      border: none;
+      border-radius: 4px;
+      &:hover{
+        transform: scale(1.08);
+        background-color: $color-primary-hover ;
+      }
+    }
+  }
 }
