--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,25 +1,41 @@
-.Hero{
+.Hero {
+  width: 100%;
+  height: 80vh;
+  position: relative;
+
+  .imageWrapper {
     width: 100%;
-    position: relative;
-
-    .heroimg{
-        width: 100%;
-        height: 80vh;
+    height: 100%;
+    .heroimg {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
+  }
 
-     .overlayHero{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 80vh;
-        background-color: $color-overlay;
-        @include flexCenter(0);
+  .overlayHero {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $color-overlay;
+    @include flexCenter(0);
 
-        h1{
-           
-            @include font($h1, 800, $color-white)
-        }
+    h1 {
+      @include font($h1, 800, $color-white);
     }
+  }
+
+  @include xs() {
+    height: 40vh;
+
+    .overlayHero {
     
+
+    h1 {
+      @include font($h3, 700, $color-white);
+    }
+  }
+  }
 }
