--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -52,9 +52,17 @@
 
   .dateHour {
     margin-bottom: 12px;
+    position: relative;
     @include spaceBetween(0);
     p {
       @include font($h5, 400, $color-primary);
+    }
+
+    .arrow{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 
